Added notification scripts and email sender

--- a/QueueIT/Views/Home/ResetPassword.cshtml
+++ b/QueueIT/Views/Home/ResetPassword.cshtml
@@ -5,26 +5,34 @@
     Layout = "_Layout";
 }
 
-<div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-        <h1 class="text-center">Register</h1>
-        <form asp-action="ResetPassword" method="post" class="form-horizontal">
-            <input asp-for="Token" type="hidden"/>
-            <input asp-for="Email" type="hidden"/>
-            <div class="form-group">
-                <label asp-for="Password" class="col-sm-2"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Password" class="form-control"/>
+<br/><br/><br/><br/><br/>
+<div align="center">
+    <div style="width: 75%">
+        <div class="rounded shadow-lg background-light-grey">
+            <br/>
+            <h4 class="text-center primary-text display-6">Reset Your QueueIT Password</h4>
+            <form asp-action="ResetPassword" method="post" class="form-horizontal">
+                <input asp-for="Token" type="hidden"/>
+                <input asp-for="Email" type="hidden"/>
+                <div align="center">
+                    <div style="width: 50%">
+                        <div align="left">
+                            <div class="form-group">
+                                <label asp-for="Password" class="secondary-text"></label>
+                                <input asp-for="Password" class="form-control"/>    
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ConfirmPassword" class="secondary-text">Confirm Password</label>
+                                <input asp-for="ConfirmPassword" class="form-control"/>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="col-sm-2"></label>
-                <div class="col-sm-10">
-                    <input asp-for="ConfirmPassword" class="form-control"/>
-                </div>
-            </div>
-            <button class="btn btn-primary">Submit</button>
-            <div asp-validation-summary="All"></div>
-        </form>
-    </div>
+                <button class="my-btn my-btn-primary">Submit</button>
+                <br/><br/>
+                <div class="errors" asp-validation-summary="All"></div>
+            </form>
+        </div>
+        </div>
 </div>
+
