--- a/QueueIT/Views/Account/Profile.cshtml
+++ b/QueueIT/Views/Account/Profile.cshtml
@@ -1,8 +1,89 @@
-@model TModel
-
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewBag.Title = "Profile";
+    Layout = "_LoggedInLayout";
 }
 
-<h2>title</h2>
+<br/><br/>
+<div align="center">
+    <div id="team-profile-container" class="rounded shadow">
+        <div class="container-row">
+            <h4 id="users-name" class="primary-text display-6"></h4>
+            <label id="users-label" for="users-name" class="secondary-text"></label>
+        </div>
+        <br/>
+        <nav class="my-nav">
+            <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+                <a class="nav-item nav-link active" id="nav-profile-tab" data-toggle="tab"
+                   href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="True">Profile</a>
+                <a class="nav-item nav-link" id="nav-queues-tab" data-toggle="tab"
+                   href="#nav-queues" role="tab" aria-controls="nav-queues" aria-selected="False">Queues</a>
+                <a class="nav-item nav-link" id="nav-settings-tab" data-toggle="tab"
+                   href="#nav-settings" role="tab" aria-controls="nav-settings" aria-selected="False">Settings</a>
+            </div>
+        </nav>
+        <div class="tab-content background-grey" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                <br/>
+                <div style="width: 75%;">
+                    <div align="left">
+                        <h4 class="primary-text display-8">Teams</h4>
+                        <table class="table table-responsive-sm">
+                            <tbody>
+                            <tr>
+                                <td class="primary-text" style="width: 20%;"><a href="#" class="team-name-link"><h4 class="display-8">Team Name</h4></a></td>
+                                <td class="secondary-text" style="width: 80%;">this is a description of a team. a team is a group of tasks that are organized into queues. queues are grouped by the team they belong too. a team is a group of people who want to work together to organize and complete their work load.</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade show" id="nav-queues" role="tabpanel" aria-labelledby="nav-queues-tab">
+                <br/>
+                <div style="width: 75%">
+                    <div align="left">
+                        <div class="container-col">
+                            <div class="container-row rounded shadow background-dark-grey">
+                                <div class="card m-10">
+                                    <button class="card-body home-card shadow">TEST QUEUE</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade show" id="nav-settings" role="tabpanel" aria="labelledby=nav-settings-tab">
+                <br/>
+                <div style="width:40%">
+                    <div align="left">
+                        <div class="form-group">
+                            <h4 class="display-6 primary-text">Account Details</h4>
+                            <label for="new-f-name" class="secondary-text">First Name</label>
+                            <input id="new-f-name" class="form-control modal-input"/>
+                            <label for="new-l-name" class="secondary-text">Last Name</label>
+                            <input id="new-l-name" class="form-control modal-input"/>
+                            <label for="new-u-name" class="secondary-text">Username</label>
+                            <input id="new-u-name" class="form-control modal-input"/>
+                        </div>
+                        <div align="center"><button class="my-btn my-btn-primary">Save Account Details</button></div>
+                        <div>
+                            <h4 class="display-6 primary-text">Notifications</h4>
+                        </div>
+                        <div align="center">
+                            <div class="dropdown show">
+                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dd-note-setting" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Notification Settings
+                                </a>
+                                <div class="dropdown-menu background-dark-grey" aria-labelledby="dd-note-setting">
+                                    <a class="dropdown-item" href="#">Never</a>
+                                    <a class="dropdown-item" href="#">Due Date</a>
+                                    <a class="dropdown-item" href="#">All Activity</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
