--- a/QueueIT/Views/Shared/_LoggedInLayout.cshtml
+++ b/QueueIT/Views/Shared/_LoggedInLayout.cshtml
@@ -1,6 +1,5 @@
 @{
-    var teamList = ViewData["Teams"] as List<Team>;
-    var queueList = ViewData["Queues"] as List<Queue>;
+//    var queueList = ViewData["Queues"] as List<Queue>;
 }
 
 <!DOCTYPE html>
@@ -14,9 +13,11 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+        <link rel="stylesheet" 
+              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" 
+              asp-fallback-test-value="absolute"
               crossorigin="anonymous"
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE="/>
     </environment>
@@ -39,24 +40,15 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">
                             <img class="layout" src="~/quickqlogo.png" alt=""/>
                         </a>
-                        <div class="dropdown-menu background-grey shadow-lg">
+                        <div id="queue-dd" class="dropdown-menu background-grey shadow-lg">
                             <h4 class="dropdown-header">Quick-Q's</h4>
-                            @if (queueList != null)
-                            {
-                                foreach (var queue in queueList)
-                                {
-                                    <form asp-action="Show" asp-controller="Queues"
-                                          asp-route-queueId="@queue.Id" method="GET">
-                                        <button class="dropdown-item secondary-text">@queue.Title</button>
-                                    </form>
-                                }
-                            }
+
                         </div>
                     </li>
-                    <li class="nav-item mx-auto secondary-text">
+                    <li class="nav-item mx-auto">
                         <img class="tall" src="~/QueueITCenterLogo.png" alt=""/>
                     </li>
                     <li class="nav-item dropdown">
@@ -65,13 +57,13 @@
                         </a>
                         <div class="dropdown-menu background-grey shadow-lg">
                             <h4 class="dropdown-header">Create</h4>
-                            <button class="dropdown-item create secondary-text" data-toggle="modal"
+                            <button class="dropdown-item create primary-text" data-toggle="modal"
                                     data-target="#CreateTeamModal" aria-hidden="true">
                                 <b>Create Team</b>
                                 <br/>A Team is a group of people who own Queues
                             </button>
                             <div class="dropdown-divider"></div>
-                            <button class="dropdown-item create secondary-text" data-toggle="modal"
+                            <button class="dropdown-item create primary-text" data-toggle="modal"
                                     data-target="#CreateQueueModal" aria-hidden="true">
                                 <b>Create Queue</b>
                                 <br/>A Queue is a group of tasks that are owned by a Team
@@ -80,29 +72,28 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link thin dropdown-toggle shadow-lg" data-toggle="dropdown">
-                            <img class="layout" src="~/Bell.png" alt=""/>
+                            <img class="layout" src="~/Bell.png" alt=""/><span id="note-badge" style="display: none;" class="badge badge-danger"></span>
                         </a>
-                        <div class="dropdown-menu background-grey shadow-lg">
+                        <div class="dropdown-menu background-grey shadow-lg" style="min-width: 250px;">
                             <h4 class="dropdown-header">Notifications</h4>
-                            <button class="dropdown-item secondary-text">TEST</button>
-                            <div class="dropdown-divider"></div>
-                            <button class="dropdown-item secondary-text">TEST</button>
-                            <div class="dropdown-divider"></div>
-                            <button class="dropdown-item secondary-text">TEST</button>
+                            <div id="notifications-list">
+                                <button class="dropdown-item primary-text" style="white-space:normal">@@NotADog123 added you to their team: Team Q.</button>
+                            </div>
+                            @* <button class="dropdown-item primary-text">TEST</button> *@
+                            @* <div class="dropdown-divider"></div> *@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link thin dropdown-toggle shadow-lg" data-toggle="dropdown">
                             <div class="avatar-circle grow">
-                                <span class="initials">AB</span>
+                                <span class="initials"></span>
                             </div>
                         </a>
                         <div class="dropdown-menu background-grey shadow-lg">
-                            <h4 class="dropdown-header">Alex Bautista</h4>
-                            <button class="dropdown-item secondary-text" type="button">Profile</button>
-                            <button class="dropdown-item secondary-text" type="button">Settings</button>
+                            <h4 class="dropdown-header" id="user-dd"></h4>
+                            <a id="user-profile-btn" class="dropdown-item">Profile</a>
                             <form asp-controller="Home" asp-action="Logout" method="post">
-                                <button class="dropdown-item secondary-text" type="submit">Logout</button>
+                                <button class="dropdown-item primary-text" type="submit">Logout</button>
                             </form>
                         </div>
                     </li>
@@ -133,16 +124,26 @@
                 <form asp-controller="Teams" asp-action="CreateTeam" method="POST">
                     <div class="form-group">
                         <label for="teamName" class="secondary-text">Team Name</label>
-                        <input type="text" id="teamName" name="teamName" class="form-control modal-input" aria-describedby="teamNameHelp" placeholder="Enter team name"/>
-                        <small id="teamNameHelp" class="form-text disabled-text">Choose a team name unique to yourself.</small>
+                        <input type="text" id="teamName" name="teamName" class="form-control modal-input" 
+                               aria-describedby="teamNameHelp" placeholder="Enter team name"/>
+                        <small id="teamNameHelp" class="form-text disabled-text">
+                            Choose a team name unique to yourself.
+                        </small>
                         <label for="teamDesc" class="secondary-text">Team Description</label>
-                        <textarea id="teamDesc" name="desc" class="form-control modal-input" rows="6" cols="50" placeholder="Description (optional)"></textarea>
+                        <textarea id="teamDesc" name="desc" class="form-control modal-input" rows="6" cols="50" aria-describedby="teamDescHelp" placeholder="Description (optional)">
+                        </textarea>
+                        <small id="teamDescHelp" class="form-text disabled-text">
+                            Provide a brief description of your team.
+                        </small>
                     </div>
                     <button class="my-btn my-btn-primary right">Create Team</button>
                 </form>
             </div>
             <div class="modal-footer">
-                <small class="disabled-text">A Team is a group of people and their Queues. Work together to complete tasks and organize your workload!</small>
+                <small class="disabled-text">
+                    A Team is a group of people and their Queues. 
+                    Work together to complete tasks and organize your workload!
+                </small>
             </div>
         </div>
     </div>
@@ -163,36 +164,38 @@
                 <form asp-controller="Queues" asp-action="CreateQueue" method="POST">
                     <div class="form-group">
                         <label for="queueTitle" class="secondary-text">Queue Title</label>
-                        <input type="text" class="form-control modal-input" id="queueTitle" name="queueTitle" placeholder="Enter title"/>
+                        <input type="text" class="form-control modal-input" id="queueTitle" 
+                               name="queueTitle" placeholder="Enter title"/>
                         <br/>
                         <label for="teamSelector" class="secondary-text">Select Team</label>
                         <div class="input-group">
-                            <select class="custom-select" id="teamSelector" name="queueTeam" aria-describedby="teamSelectorHelp">
-                                @if (teamList != null)
-                                {
-                                    foreach (var team in teamList)
-                                    {
-                                        <option value="@team.Id">@team.Name</option>
-                                    }
-                                }
+                            <select class="custom-select" id="teamSelector" 
+                                    name="queueTeam" aria-describedby="teamSelectorHelp">
+
                             </select>
                         </div>
                         <p>
-                            <small id="teamSelectorHelp" class="form-text disabled-text">Choose the team that will own this Queue or choose to keep it personal.</small>
+                            <small id="teamSelectorHelp" class="form-text disabled-text">
+                                Choose the team that will own this Queue or choose to keep it personal.
+                            </small>
                         </p>
 
                         <label for="visibilitySelector" class="secondary-text">Select Visibility</label>
                         <div class="custom-radio-group" id="visibilitySelector" aria-describedby="visibilitySelectorHelp">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="queueVisibility" id="privateRadio" value="private" checked>
+                                <input class="form-check-input" type="radio" name="queueVisibility" 
+                                       id="privateRadio" value="private" checked>
                                 <label class="form-check-label secondary-text" for="privateRadio">Private</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="queueVisibility" id="publicRadio" value="public">
+                                <input class="form-check-input" type="radio" name="queueVisibility" 
+                                       id="publicRadio" value="public">
                                 <label class="form-check-label secondary-text" for="publicRadio">Public</label>
                             </div>
                         </div>
-                        <small id="visibilitySelectorHelp" class="primary-text disabled-text">Public means anyone who visits the team's profile can see this Queue.</small>
+                        <small id="visibilitySelectorHelp" class="primary-text disabled-text">
+                            Public means anyone who visits the team's profile can see this Queue.
+                        </small>
                     </div>
                     <button class="my-btn my-btn-primary" style="color: #ffffff !important">Create Queue</button>
                 </form>
@@ -215,7 +218,8 @@
 </footer>
 
 <environment include="Development">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js">
+    </script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </environment>
 <environment exclude="Development">
@@ -235,5 +239,50 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 
 @RenderSection("Scripts", required: false)
+<script>
+
+    $.ajax({
+        type: 'get',
+        url: '/Account/GetLayoutData',
+        beforeSend: function(req) {
+            req.setRequestHeader('Content-type', 'application/json');
+        },
+        success: function(resp) {
+            console.dir(resp);
+            fillHTML(resp);
+        }
+    });
+    
+    function fillHTML(resp) {
+        resp.teams.forEach(function(team) {
+            var $opt = $('<option value="' + team.id + '">' + team.name + '</option>');
+            $('#teamSelector').append($opt);
+        });
+        resp.queues.forEach(function(queue) {
+            var $a = $(
+                '<a class="dropdown-item primary-text" href="/Queues/Show/' + queue.id + '">' + queue.title + '</a>'
+            );
+            $('#queue-dd').append($a);
+        });
+        $('.initials').text(resp.userInitials);
+        $('#user-dd').text(resp.userFirstName + " " + resp.userLastName);
+        
+        $('#user-profile-btn').attr('href', '/Account/Profile');
+        $('#users-name').text(resp.userFirstName + " " + resp.userLastName);
+        $('#users-label').text('@@' + resp.userName);
+        $('#new-f-name').attr('value', resp.userFirstName);
+        $('#new-l-name').attr('value', resp.userLastName);
+        $('#new-u-name').attr('value', resp.userName);
+        
+        if (resp.notifications.length > 0) {
+            $('#note-badge').toggle();
+            $('#note-badge').text(resp.notifications.length);
+
+        }
+    }
+
+
+</script>
+
 </body>
 </html>
